--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -44,9 +44,6 @@
         <activity android:name="unimelb.edu.instamelb.activities.LoginActivity" android:theme="@style/AppTheme.Dark.Dialog" />
         <activity android:name="unimelb.edu.instamelb.activities.SignupActivity" android:theme="@style/AppTheme.Dark.Dialog" />
         <activity
-            android:name="unimelb.edu.instamelb.activities.ActivityTakePhoto"
-            android:label="activity_take_photo"/>
-        <activity
             android:name="unimelb.edu.instamelb.activities.ActivityDetail"
             android:label="activity_photo_detail"/>
         <activity
@@ -64,6 +61,9 @@
         <activity
             android:name="unimelb.edu.instamelb.activities.ActivityLibrary"
             android:label="activity_library" ></activity>
+        <activity
+            android:name="unimelb.edu.instamelb.activities.ActivityChoosePhoto"
+            android:label="activity_choose_photo" ></activity>
 
 
     </application>
