--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="unimelb.edu.instamelb.materialtest" >
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- Always required on api < 21, needed to keep a wake lock while your job is running -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -40,16 +41,17 @@
                 android:value="unimelb.edu.instamelb.activities.ActivityMain" />
         </activity>
 
-        <service
-            android:name="unimelb.edu.instamelb.services.ServiceMoviesBoxOffice"
-            android:exported="true"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
-
         <activity android:name="unimelb.edu.instamelb.activities.LoginActivity" android:theme="@style/AppTheme.Dark.Dialog" />
         <activity android:name="unimelb.edu.instamelb.activities.SignupActivity" android:theme="@style/AppTheme.Dark.Dialog" />
         <activity
             android:name="unimelb.edu.instamelb.activities.ActivityTakePhoto"
             android:label="activity_take_photo"/>
+        <activity
+            android:name="unimelb.edu.instamelb.activities.ActivityDetail"
+            android:label="activity_photo_detail"/>
+        <activity
+            android:name="unimelb.edu.instamelb.activities.ActivityProfile"
+            android:label="activity_user_detail"/>
         <activity
             android:name="unimelb.edu.instamelb.sensors.CameraSensor"
             android:label="Camera Sensor" ></activity>
